<resources>
    <string name="app_name">OfficeOffice</string>
    <string name="emp_id">Employee Id</string>
    <string name="password">Password</string>
    <string name="login">Login</string>
    <string name="all_projects">All Projects</string>
    <string name="save_data">Save</string>

    <string name="emp_name">Name</string>
    <string name="emp_id_model">Employee ID</string>
    <string name="emp_password">Password</string>
    <string name="emp_role">Role</string>
    <string name="saprater">:</string>
    <string name="submit">submit</string>
    <string name="domain_name">Domain</string>
    <string name="add_role">Add Role</string>
    <string name="role_hint">Enter new role</string>
    <string name="prvlg_hint">Add privilege</string>
    <string name="domain_hint">Add Domain</string>
    <string name="check_all">All</string>
</resources>
