<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_marginLeft="8dp"
    android:layout_marginRight="8dp"
    android:layout_marginTop="@dimen/activity_horizontal_margin"
    tools:context=".Fragments.AddModelFragment">

    <!-- TODO: Update blank fragment layout -->
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/text_empID"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="2.5"
                android:text="@string/emp_id_model"
                android:textSize="18dp"
                android:textStyle="bold" />

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="0.5"
                android:text="@string/saprater"
                android:textSize="20dp"
                android:textStyle="bold" />

            <EditText
                android:id="@+id/et_empID"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="6" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
            android:orientation="horizontal">

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="2.5"
                android:text="@string/emp_role"
                android:textSize="18dp"
                android:textStyle="bold" />

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="0.5"
                android:text="@string/saprater"
                android:textSize="20dp"
                android:textStyle="bold" />

            <Spinner
                android:id="@+id/spinner_owner"
                style="@style/Base.Widget.AppCompat.Spinner.Underlined"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="6" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:orientation="horizontal">

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="2.5"
                android:text="@string/domain_name"
                android:textSize="18dp"
                android:textStyle="bold" />

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="0.5"
                android:text="@string/saprater"
                android:textSize="20dp"
                android:textStyle="bold" />

            <Spinner
                android:id="@+id/spinner_domain"
                style="@style/Base.Widget.AppCompat.Spinner.Underlined"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="6" />
        </LinearLayout>

        <Button
            android:id="@+id/buttonsubmit"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="10dp"
            android:text="@string/submit" />
    </LinearLayout>
</FrameLayout>
