<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:weightSum="10"
    tools:context=".Activity.MainActivity">
    <ImageView
        android:id="@+id/gaadiImage"
        android:layout_width="wrap_content"
        android:layout_height="0dp"
        android:layout_gravity="center"
        android:layout_weight="3"
        android:src="@drawable/gaadilogo" />

    <LinearLayout
        android:id="@+id/detail_of_user"
        android:layout_width="fill_parent"
        android:layout_height="0dp"
        android:layout_margin="20dp"
        android:orientation="vertical"
        android:gravity="center_horizontal"
        android:layout_weight="6">

        <android.support.design.widget.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="10dp">

            <EditText
                android:id="@+id/empId"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:hint="@string/emp_id"
                android:singleLine="true" />

        </android.support.design.widget.TextInputLayout>

        <android.support.design.widget.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="10dp">

            <EditText
                android:id="@+id/editPassword"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:hint="@string/password"
                android:singleLine="true"
                android:password="true" />

        </android.support.design.widget.TextInputLayout>

        <Button
            android:id="@+id/login"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:layout_gravity="center"
            android:padding="20dp"
            android:textSize="15sp"
            android:text="@string/login" />

    </LinearLayout>

</LinearLayout>
