<?xml version="1.0" encoding="utf-8"?>

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.truedev.officeoffice.Fragments.AddRoleFragment">
<ScrollView
    android:layout_width="match_parent"
    android:layout_height="0dp"
    android:layout_weight="6">
    <LinearLayout
        android:id="@+id/layout1"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        >
    <LinearLayout
        android:id="@+id/line1"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/empname"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="20sp"
            android:layout_marginTop="10dp"
            android:text="@string/add_role" />

        <EditText
            android:id="@+id/et_name"
            android:layout_width="match_parent"
            android:layout_height="45dp"
            android:inputType="textNoSuggestions"
            android:layout_margin="10dp"
            android:hint="@string/role_hint" />

    </LinearLayout>

    <LinearLayout
        android:id="@+id/line2"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_below="@+id/line1"
        android:layout_weight="8">

        <android.support.v7.widget.RecyclerView
            android:id="@+id/rv_contactlist"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

        </android.support.v7.widget.RecyclerView>
    </LinearLayout>
    </LinearLayout>
</ScrollView>
    <LinearLayout
        android:id="@+id/line3"
        android:layout_width="wrap_content"
        android:layout_height="0dp"
        android:layout_alignParentBottom="true"
        android:layout_below="@+id/line2"
        android:layout_gravity="center_horizontal"
        android:layout_weight="1">
        <Button
            android:id="@+id/bSubmit"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:gravity="center"
            android:text="@string/submit" />
    </LinearLayout>

</LinearLayout>